--- a/TeX/src/main_short.tex
+++ b/TeX/src/main_short.tex
@@ -6,6 +6,9 @@
 
 \newcommand{\iu}{\mathrm{i}}
 \newcommand{\rank}{\operatorname{rank}}
+\newcommand{\statement}[2][numbered]{\par\ifthenelse{\equal{#1}{numbered}}%
+{\addtocounter{c_utv}{+1}\par\textbf{Утверждение\,\,\staten}\textit{ #2}}%
+{\par\textbf{Утверждение}\textit{ #2}}}%
 
 \begin{document}
     \hyphenation{СПбГУ}
@@ -66,11 +69,12 @@
     SSA (Singular Spectrum Analysis)~\cite{ssa} является распространённым
     методом анализа и прогноза временных рядов.
     Этот метод используется, в частности, для выделения сигнала и выделения тренда и периодических компонент из временного ряда.
-    Хотя в последнее время получили распространение методы машинного обучения (например, в~\cite{ezhov-ssa} рассматривается
-    задача прогноза с предобработкой временного ряда методом SSA перед применением нейронных сетей для прогноза),
-    задача анализа одного недлинного временного ряда не теряет своей актуальности.
-    Ряд методов рассматривает при этом конкретные модели для сигнала/тренда (например, в~\cite{Vestnik}
-    рассматривается полиномиальная регрессия).
+    В последнее время получили распространение методы машинного обучения.
+    Например, в~\cite{ezhov-ssa} рассматривается
+    задача прогноза с предобработкой временного ряда методом SSA перед применением нейронных сетей для прогноза.
+    Однако задача анализа одного недлинного временного ряда не теряет своей актуальности.
+    Ряд методов рассматривает при этом конкретные модели для сигнала/тренда. Например, в~\cite{Vestnik}
+    рассматривается полиномиальная регрессия.
     Метод SSA не требует задания параметрической модели, поэтому он более универсальный.
     Однако, при этом метод SSA хорошо работает и с моделью в виде суммы комплексных экспонент или
     в виде суммы экспоненциально-модулированных гармоник в вещественном случае,
@@ -84,40 +88,33 @@
     
     В работе~\cite{papy-esprit} предлагается модификация метода ESPRIT, основанная на переходе от траекторной матрицы и
     матричного сингулярного разложения к траекторному тензору и тензорному сингулярному разложению, и
-    демонстрируется преимущество такой модификации при оценке параметров, в частности, частот. При этом для случая многомерного временного ряда особой структуры преимущество наиболее очевидно.
-    В данной работе мы рассматриваем аналогичную тензорную модификацию метода MSSA
-    (HO-MSSA, где HO --- сокращение от high order) для выделения сигналов
+    демонстрируется преимущество такой модификации при оценке параметров, в частности, частот.
+    При этом для случая многомерного временного ряда особой структуры преимущество наиболее очевидно.
+    В данной работе рассмотрим аналогичную тензорную модификацию метода MSSA
+    (HO-MSSA, где HO -- сокращение от high order) для выделения сигналов
     из временных рядов.
     Целью работы является сравнение метода MSSA с его тензорной модификацией на временных рядах,
     аналогичных тем, что были рассмотрены в~\cite{papy-esprit}.
 
-
-    В разделе~2 опишем модель рассматриваемых сигналов.
-    В разделе~3 определим траекторную матрицу и траекторный тензор, а также дадим определение ранга сигнала.
-    В этом разделе приведено утверждение о соотношении между матричным и тензорным рангами сигнала.
-    В разделе~4 коротко опишем метод MSSA и его тензорную модификацию HO-MSSA для задачи выделения сигнала.
-    Описание во всех разделах будет дано в более общей комплексной форме, хотя применять метод мы будем в вещественном случае.
-    В разделе~5 описаны результаты численных сравнений.
-
     \razdel{Модель сигнала} \label{sec:model}
     Опишем рассматриваемые многомерные комплексные сигналы.
-    Пусть дан одномерный временной ряд, состоящий из $N$ комплексных значений $s_n$, $n=0, 1,\ldots, N-1$,
+    Пусть дан одномерный временной ряд, состоящий из $N$ комплексных значений $s_n$, $n=0,\ldots, N-1$,
     и пусть этот ряд представим в виде конечной суммы $R$ экспоненциально-модулированных комплексных гармоник
     \begin{equation}
         s_n = \sum_{j=1}^{R} a_j e^{ -\alpha_j n }
-        e^{\iu \left( 2 \pi \omega_j n + \varphi_j\right)}.\label{eq:1d-complex-model}
+        e^{\iu \left( 2 \pi \omega_j n + \varphi_j\right)} .\label{eq:1d-complex-model}
     \end{equation}
     Параметрами модели являются амплитуды $a_j \in \mathbb{R}\setminus\{0\}$, фазы ${\varphi_j \in [0, 2\pi)}$,
     частоты $\omega_j\in [0, 1/2]$ и степени затухания $\alpha_j \in \mathbb{R}$.
 
-    Модель многомерного сигнала имеет вид набора $P$ одномерных сигналов вида~\eqref{eq:1d-complex-model}, то есть
+    Модель многомерного сигнала имеет вид набора $P$ одномерных сигналов вида~\eqref{eq:1d-complex-model}, т.~е.
     \begin{equation}
         s_n^{(p)} = \sum_{j=1}^{R(p)} a_j^{(p)} e^{ -\alpha_j^{(p)} n }
         e^{\iu \left( 2 \pi \omega_j^{(p)} n + \varphi_j^{(p)}\right)},
         \label{eq:nd-complex-model-general}
     \end{equation}
-    где $n=0,1,\ldots, N-1$, а $p$ ($1\leqslant p \leqslant P$) отвечает за номер одномерного временного ряда.
-    Далее мы будем рассматривать частный случай такой модели, при котором параметры $R(p)$, $\omega_j^{(p)}$ и
+    где $n=0,\ldots, N-1$, а $p$ ($1\leqslant p \leqslant P$) отвечает за номер одномерного временного ряда.
+    Далее будем рассматривать частный случай такой модели, при котором параметры $R(p)$, $\omega_j^{(p)}$ и
     $\alpha_j^{(p)}$ не зависят от номера ряда $p$:
     \begin{equation}
         s_n^{(p)} = \sum_{j=1}^{R} a_j^{(p)} e^{ -\alpha_j n }
@@ -128,33 +125,33 @@
     Кроме того, в работе~\cite{papy-esprit} используется именно этот частный случай модели.
 
     \Remark[n]~В общем случае можно рассматривать модели временных рядов вида~\eqref{eq:1d-complex-model},
-    в которых амплитуды являются ненулевыми многочленами, однако этот случай выходит за рамки этой работы.
+    в которых амплитуды являются ненулевыми многочленами.
 
     \razdel{Ряды конечного ранга и тензорные ранги}
     Одними из ключевых объектов в теории SSA являются \emph{ряды конечного ранга}.
-    В данном разделе мы изложим теорию, касающуюся рядов конечного ранга, а затем рассмотрим теорию тензорных рангов,
-    и приведём утверждения, связывающие ранги рядов с рангами определенных тензоров.
+    В данном разделе изложим теорию, касающуюся рядов конечного ранга, а затем рассмотрим теорию тензорных рангов,
+    и приведём утверждения, связывающие ранги рядов с рангами определённых тензоров.
 
     \podrazdel{Ряды конечного ранга}
     Введём несколько вспомогательных определений.
 
     \Definition~\emph{Оператором вложения с длиной окна $L$} будем называть отображение, преобразующее временной ряд (возможно, комплексный)
-    $\left(x_0, x_1, \ldots, x_{N-1}\right)$ в ганкелеву матрицу размерности $L\times K$ ($K = N-L+1$) следующим образом:
-    \begin{equation}
-        \mathbb{H}_L\left( \left(x_0, x_1, \ldots, x_{N-1}\right) \right) =
+    $\left(x_0, \ldots, x_{N-1}\right)$ в ганкелеву ($L\times K$)-матрицу, \linebreak $K = N-L+1$, следующим образом:
+    \begin{equation*}
+        \mathbb{H}_L\left( \left(x_0, \ldots, x_{N-1}\right) \right) =
         \begin{pmatrix}
             x_0     & x_1     & { x}_2  & \ldots  & x_{K-1} \\
-            x_1     & x_2     & \iddots & \ldots  & \vdots  \\
-            x_2     & \iddots & \iddots & \ldots  & \vdots  \\
-            \vdots  & \vdots  & \vdots  & \vdots  & x_{N-2} \\
+            x_1     & x_2     & \iddots & \cdots  & \vdots  \\
+            x_2     & \iddots & \cdots & \cdots  & \vdots  \\
+            \iddots  & \vdots  & \vdots  & \vdots  & x_{N-2} \\
             x_{L-1} & \ldots  & \ldots  & x_{N-2} & x_{N-1} \\
-        \end{pmatrix}.\label{eq:hankelization-operator}
-    \end{equation}
+        \end{pmatrix}.
+    \end{equation*}
 
-    \Definition~\emph{Траекторной матрицей одномерного временного ряда $(x_0, x_1, \ldots, x_{N-1})$ с длиной окна $L$}
+    \Definition~\emph{Траекторной матрицей одномерного временного ряда $(x_0, \ldots, x_{N-1})$ с длиной окна $L$}
     называется матрица $\mathbf{H}$, полученная применением оператора вложения с длиной окна $L$ к данному временному ряду.
 
-    \Definition~Ряд $(x_0, x_1, \ldots, x_{N-1})$ называется \emph{рядом конечного ранга $d$} ($d<N/2$), если для любой длины
+    \Definition~Ряд $(x_0, \ldots, x_{N-1})$ называется \emph{рядом конечного ранга $d$} ($d<N/2$), если для любой длины
     окна $L < N$ такой, что $\min(L, K) \geqslant d$, траекторная матрица этого ряда, построенная по
     \newpage
     \noindent данной длине окна, имеет ранг $d$.
@@ -162,32 +159,32 @@
     \Example~Временной ряд вида~\eqref{eq:1d-complex-model} имеет ранг, равный количеству уникальных пар
     $(\alpha_j, \omega_j)$ по всем $j$~\cite{Stepanov}.
 
-    \Definition~Рассмотрим многомерный временной ряд
+    Рассмотрим многомерный временной ряд
     \[
-        \left(s_0^{(p)}, s_1^{(p)}, \ldots, s_{N-1}^{(p)}\right), \quad p = 1, 2, \ldots, P.
+        \left(s_0^{(p)}, \ldots, s_{N-1}^{(p)}\right), \quad p = 1, \ldots, P.
     \]
     Построим для каждого одномерного ряда $\left(s_n^{(p)}\right)_{n=0}^{N-1}$ траекторную матрицу с длиной окна
     $L$:
     \[
-        \mathbf{H}_p = \mathbb{H}_L\left( s_0^{(p)}, s_1^{(p)}, \ldots, s_{N-1}^{(p)} \right).
+        \mathbf{H}_p = \mathbb{H}_L\left( s_0^{(p)}, \ldots, s_{N-1}^{(p)} \right).
     \]
-    Тогда \emph{траекторной матрицей данного многомерного ряда с длиной окна $L$} называется матрица $\mathbf{H}$, полученная
+    \Definition~\emph{Траекторной матрицей данного многомерного ряда с длиной окна $L$} называется матрица $\mathbf{H}$, полученная
     приписыванием матриц $\mathbf{H}_p$ друг за другом по столбцам:
     \begin{equation}
-        \mathbf{H} = [\mathbf{H}_1 : \mathbf{H}_2 : \ldots : \mathbf{H}_P].\label{eq:nd-trajectory-matrix}
+        \mathbf{H} = [\mathbf{H}_1 : \ldots : \mathbf{H}_P].\label{eq:nd-trajectory-matrix}
     \end{equation}
     \Remark[n]~Ранг многомерного ряда определяется аналогично рангу одномерного ряда с заменой траекторной матрицы
     одномерного ряда на траекторную матрицу многомерного ряда.
 
-    \Example~Многомерный временной ряд вида~\eqref{eq:nd-complex-model-general} имеет ранг равный количеству уникальных
+    \Example~Многомерный временной ряд вида~\eqref{eq:nd-complex-model-general} имеет ранг, равный количеству уникальных
     пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$~\cite{Stepanov}.
 
     \Example~Так как $\cos(2 \pi \omega n + \varphi_n) =
     \left( e^{2\pi \iu \omega n + \varphi_n} + e^{-2\pi \iu \omega n - \varphi_n} \right) / 2$,
     то ранг ряда
-    \begin{equation}
-        s_n = A e^{\alpha n} \cos(2\pi \omega n + \varphi)\label{eq:exp-modul-cos}
-    \end{equation}
+    \begin{equation*}
+        s_n = A e^{\alpha n} \cos(2\pi \omega n + \varphi)
+    \end{equation*}
     с $A\ne 0$ равен $2$, если $\omega \in (0, 1/2)$ и равен $1$, если $\omega \in \{0, 1/2\}$.
 
     \Example~Пусть ряд представляется в виде суммы $M$ \\ экспоненциально-модулированных гармоник
@@ -203,14 +200,14 @@
             2, & \text{иначе},
         \end{cases}
     \]
-    тогда ранг ряда~\eqref{eq:exp-modul-cos-sum} равен сумме $\sum_{(\omega, \alpha) \in \Omega} r(\omega)$, где
+    тогда ранг ряда~\eqref{eq:exp-modul-cos-sum} равен $\sum_{(\omega, \alpha) \in \Omega} r(\omega)$, где
     $\Omega$~-- множество уникальных пар $(\omega_j, \alpha_j)$ по всем $j$.
 
     \podrazdel{Тензорные ранги}
-    
-    \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times I_2 \times \ldots \times I_M}$ по
+    Введём несколько вспомогательных определений.
+    \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times \ldots \times I_M}$ по
     измерению $n$} называются векторы вида
-    $\left(\left( a_{i_1 i_2 \ldots i_{n-1} k i_{n+1} \ldots i_M} \right)_{k=1}^{I_n}\right)^\mathrm{T}$,
+    $\left(\left( a_{i_1 \ldots i_{n-1} k i_{n+1} \ldots i_M} \right)_{k=1}^{I_n}\right)^\mathrm{T}$,
     где индексы $i_j$ фиксированы.
 %    \Definition~\emph{Векторами тензора $\mathcal{A} \in \mathbb{C}^{I_1\times I_2 \times \ldots \times I_M}$ вдоль
 %    измерения $n$} называются векторы вида $\left(a_1, a_2, \ldots, a_{I_n} \right)^\mathrm{T}$,
@@ -225,33 +222,34 @@
 
     \Definition~\emph{$n$-Рангом} тензора $\mathcal{A}$ называют размерность линейной оболочки, построенной
     по векторам этого тензора по измерению $n$.
-    Обозначение: $\rank_n(\mathcal{A})$.
+    Обозначим его $\rank_n(\mathcal{A})$.
 
     \Definition~\emph{Траекторным тензором многомерного временного ряда}
     \[
-        \left( x_0^{(p)}, x_1^{(p)}, \ldots, x_{N-1}^{(P)} \right), \quad p=1,2,\ldots, P
+        \left( x_0^{(p)}, \ldots, x_{N-1}^{(P)} \right), \quad p=1,\ldots, P,
     \]
     \emph{с длиной окна $L$} называется тензор $\mathcal{H}\in\mathbb{C}^{L\times K \times P}$ ($K = N-L+1$),
     элемент $h_{lkp}$ которого равен $x_{l+k-2}^{(p)}$.
-    То есть слой траекторного тензора с номером $p$ по третьему измерению получается как траекторная матрица,
+
+    Таким образом, слой траекторного тензора с номером $p$ по третьему измерению получается как траекторная матрица,
     построенная по ряду с номером $p$ с длиной окна $L$:
     \begin{equation}
         \mathcal{H}_{\cdot \cdot p} = \mathbb{H}_L\left(
-        \left( x_0^{(p)}, x_1^{(p)}, \ldots x_{N-1}^{(p)} \right)
+        \left( x_0^{(p)}, \ldots x_{N-1}^{(p)} \right)
         \right).\label{eq:nd-trajectory-tensor}
     \end{equation}
 
     Основываясь на виде траекторного тензора многомерного ряда, можно доказать следующее утверждение,
     связывающее понятие многомерного ряда конечного ранга и понятие $n$-рангов траекторного тензора этого ряда.
 
-    \Statement{(Об $n$-рангах траекторного тензора многомерного ряда конечного ранга)}
+    \statement[n]{(Об $n$-рангах траекторного тензора многомерного ряда конечного ранга).
     Пусть временной ряд
     \[
-        \left( x_0^{(p)}, x_1^{(p)}, \ldots, x_{N-1}^{(p)} \right), \quad p=1, 2,\ldots, P
+        \left( x_0^{(p)}, \ldots, x_{N-1}^{(p)} \right), \quad p=1,\ldots, P
     \]
-    имеет ранг $d$ в терминах MSSA, тогда для траекторного тензора $\mathcal{H}$, построенного по любой длине окна $L<N$
+    имеет ранг $d$ в терминах MSSA. Тогда для траекторного тензора $\mathcal{H}$, построенного по любой длине окна $L<N$
     такой, что ${\min(L, K) \geqslant d}$, выполняется $\rank_1(\mathcal{H})=\rank_2(\mathcal{H})=d$, а $3$-ранг этого тензора
-    равен рангу матрицы, в строках которой записаны заданные одномерные ряды.
+    равен рангу матрицы, в строках которой записаны заданные одномерные ряды.}
 %    \begin{equation}
 %        \mathbf{S} =
 %        \begin{pmatrix}
@@ -264,8 +262,10 @@
 
     \razdel{Методы для оценки сигнала}
     Пусть дан некоторый многомерный сигнал вида~\eqref{eq:nd-complex-model}.
-    В работе~\cite{papy-esprit} рассматривается задача оценки параметров $\omega_j$ и $\alpha_j$ такого ряда, мы же
-    будем рассматривать задачу оценки значения самого сигнала по наблюдаемому зашумлённому сигналу. В качестве шума можно рассматривать нерегулярные колебания вокруг нуля. Мы будем рассматривать реализации независимого гауссовского шума с нулевым математическим ожиданием и одинаковой дисперсией для разных рядов.
+    В работе~\cite{papy-esprit} рассматривается задача оценки параметров $\omega_j$ и $\alpha_j$ такого ряда.
+    Мы же рассмотрим задачу оценки значения самого сигнала по наблюдаемому зашумлённому сигналу.
+    В качестве шума можно рассматривать нерегулярные колебания вокруг нуля.
+    Мы рассмотрим реализации независимого гауссовского шума с нулевым математическим ожиданием и одинаковой дисперсией для разных рядов.
 
     \podrazdel{MSSA}
     %Пусть дан многомерный временной ряд вида~\eqref{eq:nd-complex-model}.
@@ -274,56 +274,51 @@
     На первом шаге выбирается длина окна $L$ и по ней строится траекторная матрица $\mathbf{H}$~\eqref{eq:nd-trajectory-matrix}
     данного многомерного ряда.
     Эту матрицу можно представить в виде её сингулярного разложения (SVD)
-    \begin{equation}
+    \begin{equation*}
         \mathbf{H}=
         \sum_{j=1}^{d} \sigma_j U_j V_j^{\mathrm{H}},
-        \label{eq:1d-complex-svd}
-    \end{equation}
+    \end{equation*}
     где $d=\rank(\mathbf{H}) \geqslant \min(L, K)$, $\sigma_j$~-- сингулярные числа матрицы $\mathbf{H}$,
     верхний индекс $\mathrm{H}$ обозначает эрмитово сопряжение, а
-    матрицы $\mathbf{U}=\left[ U_1 : U_2 : \ldots : U_d \right] \in \mathbb{C}^{L \times d}$ и
-    $\mathbf{V}=\left[ V_1 : V_2 : \ldots : V_d \right] \in \mathbb{C}^{K \times d}$ унитарные.
+    матрицы \linebreak $\mathbf{U}=\left[ U_1 : \ldots : U_d \right] \in \mathbb{C}^{L \times d}$ и
+    $\mathbf{V}=\left[ V_1 : \ldots : V_d \right] \in \mathbb{C}^{K \times d}$ унитарные.
 
     Если на данный сигнал воздействует шум, то траекторная матрица будет матрицей полного ранга и тогда рассматривается наилучшее приближение траекторной матрицы матрицей заданного ранга $r \leqslant d$:
-    \begin{equation}
+    \begin{equation*}
         \widehat{\mathbf{H}}=
         \sum_{j=1}^{r} \sigma_j U_j V_j^{\mathrm{H}}.
-        \label{eq:1d-best-rank-approx}
-    \end{equation}
-    Последний шаг алгоритма~-- восстановление, заключается в усреднении каждой матрицы $\widehat{\mathbf{H}}_p$ по побочным диагоналям, то есть
-    \begin{equation}
-        \widetilde{s}_n^{(p)} = \frac {1}{|M_n|} \sum_{i,j\in M_n}\widehat{h}_{ij}^{(p)}, \quad n=0,1,\ldots, N-1,
-        \label{eq:1d-diag-averaging}
-    \end{equation}
+    \end{equation*}
+    Последний шаг алгоритма~-- восстановление, заключается в усреднении каждой матрицы $\widehat{\mathbf{H}}_p$ по побочным диагоналям, т.~е.
+    \begin{equation*}
+        \widetilde{s}_n^{(p)} = \frac {1}{|M_n|} \sum_{i,j\in M_n}\widehat{h}_{ij}^{(p)}, \quad n=0,\ldots, N-1,
+    \end{equation*}
     где ${M_n = \left\{(i, j):\: i+j-2=n,\, 1 \leqslant i \leqslant L,\,  1 \leqslant j \leqslant K\right\}}$, а
     $\widehat{h}_{ij}^{(p)}$~-- элементы матрицы $\widehat{\mathbf{H}}_p$.
     Результат такого усреднения $\widetilde{s}_n^{(p)}$ считается оценкой сигнала $s_n^{(p)}$.
     
     \podrazdel{High-Order MSSA}
-    В работе~\cite{papy-esprit} была предложена тензорная модификация алгоритма ESPRIT для оценки параметров
+    В работе~\cite{papy-esprit} предложена тензорная модификация алгоритма ESPRIT для оценки параметров
     многомерных сигналов.
-    В этом разделе мы приведём расширение этого алгоритма для решения задачи выделения сигнала из многомерных \newpage \noindent рядов.
+    В этом разделе мы приведём расширение этого алгоритма для решения задачи выделения сигнала из многомерных рядов.
 
-    Рассматриваем многомерный временной ряд с сигналом вида~\eqref{eq:nd-complex-model}.
+    Рассмотрим многомерный временной ряд с сигналом вида~\eqref{eq:nd-complex-model}.
     На первом шаге выбирается длина окна $1<L<N$ и по данному ряду строится
     траекторный тензор многомерного ряда $\mathcal{H}$~\eqref{eq:nd-trajectory-tensor}.
     Затем траекторный тензор представляется в виде своего HO-SVD \cite{hosvd}
-    \begin{equation}
+    \begin{equation*}
         \mathcal{H} = \sum_{l=1}^{d_1} \sum_{k=1}^{d_2} \sum_{p=1}^{d_3}
         c_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
-        \label{eq:nd-hosvd}
-    \end{equation}
+    \end{equation*}
     Из примера~2 и утверждения~1 следует, что при некоторых условиях на $N$ и $L$ $1$- и $2$-ранги траекторного тензора
     будут равны количеству уникальных пар $(\alpha_j^{(p)}, \omega_j^{(p)})$ по всем $j$ и $p$, а $3$-ранг будет равен
     рангу матрицы, в строках которой записаны заданные одномерные ряды.
     Если во временном ряде присутствует шум, то у траекторного тензора будут максимальные $n$-ранги,
     и тогда выбираются параметры $r$ и $r_3$ и строится приближение траекторного тензора с $1$- и $2$-рангами, равными
     $r$, и $3$-рангом, равным $r_3$:
-    \begin{equation}
+    \begin{equation*}
         \widehat{\mathcal{H}} = \sum_{l=1}^{r} \sum_{k=1}^{r} \sum_{p=1}^{r_3}
         \sigma_{lkp} U^{(1)}_l \circ U^{(2)}_k \circ U^{(3)}_p.
-        \label{eq:nd-cropped-hosvd}
-    \end{equation}
+    \end{equation*}
 
     Последний шаг алгоритма аналогичен по смыслу шагу восстановления в алгоритме
     MSSA и заключается в усреднении матриц-слоёв $\widehat{\mathcal{H}}_{\cdot \cdot p}$ полученного приближения
@@ -334,19 +329,19 @@
     HO-MSSA.
     Точность выделения сигнала сравнивалась с помощью RMSE оценки сигнала по 1000
     реализациям шума.
-    Методы сравнивались на одних и тех же реализациях шума, все различия значимы при уровне значимости $\alpha = 0.05$.
+    Методы сравнивались на одних и тех же реализациях шума, все различия значимы при уровне значимости $\alpha = 0,\!05$.
 
     \podrazdel{Сигнал с одинаковыми фазами}
     Пусть временной ряд имеет вид
     \begin{equation}
         \begin{split}
-            x_n^{(p)} = c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n) + c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n) + \varepsilon_n^{(p)},
+            x_n^{(p)} = c_1^{(p)} e^{-0,01 n} \cos(2\pi 0,\!2 n) + c_2^{(p)} e^{-0,02 n} \cos(2\pi 0,\!22 n)
+            + \varepsilon_n^{(p)},
         \end{split}\label{eq:nd-comparison}
     \end{equation}
-    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $c_k^{(p)}$~-- независимые нормальные случайные
-    величины с нулевым средним и стандартным
-    \newpage \vspace*{0.3cm} \noindent отклонением $1$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных
-    величин с нулевым средним и стандартным отклонением $\sigma = 0.02$
+    где $n=0,\ldots, 24$, $p=1,\ldots, 12$, $c_k^{(p)}$~-- независимые нормальные случайные
+    величины с нулевым средним и стандартным отклонением $1$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных
+    величин с нулевым средним и стандартным отклонением $\sigma = 0,\!02$
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для MSSA $L = 22$, для HO-MSSA $L=20$).
@@ -362,13 +357,13 @@
     Пусть временной ряд имеет вид
     \begin{equation}
         \begin{split}
-            x_n^{(p)} = &c_1^{(p)} e^{-0.01 n} \cos(2\pi 0.2 n + p \pi / 6)\\
-            + &c_2^{(p)} e^{-0.02 n} \cos(2\pi 0.22 n + p \pi / 9) + \varepsilon_n^{(p)},
+            x_n^{(p)} &= c_1^{(p)} e^{-0,01 n} \cos(2\pi 0,\!2 n + p \pi / 6) + \\
+            &+ c_2^{(p)} e^{-0,02 n} \cos(2\pi 0,\!22 n + p \pi / 9) + \varepsilon_n^{(p)},
         \end{split}\label{eq:nd-comparison-lin-phase}
     \end{equation}
-    где $n=0,1,\ldots, 24$, $p=1,2,\ldots, 12$, $c_k^{(p)}$~-- независимые нормальные случайные
+    где $n=0,\ldots, 24$, $p=1,\ldots, 12$, $c_k^{(p)}$~-- независимые нормальные случайные
     величины с нулевым средним и стандартным отклонением $1$, $\varepsilon_n^{(p)}$~-- последовательность независимых нормальных случайных величин
-    с нулевым средним и стандартным отклонением $\sigma = 0.02$
+    с нулевым средним и стандартным отклонением $\sigma = 0,\!02$.
 
     Будем сравнивать точность выделения сигнала при выборе оптимальных для каждого метода длин окна
     (для обоих методов оптимальное $L = 21$).
@@ -377,38 +372,29 @@
     число компонент по всем измерениям в HO-MSSA тоже равным 4.
     \Table{RMSE оценки многомерного сигнала}{|l|c|c|}{
          & MSSA & HO-MSSA \nextline
-        сигнал~\eqref{eq:nd-comparison} & $0.0107$ & $0.0079$ \nextline
-        сигнал~\eqref{eq:nd-comparison-lin-phase} & $0.00924$ & $0.00918$ \nextline
+        сигнал~\eqref{eq:nd-comparison} & 0,0093 & 0,0070 \nextline
+        сигнал~\eqref{eq:nd-comparison-lin-phase} & 0,0092 & 0,0091 \nextline
     }{}
-%    \Table{RMSE оценки сигнала \label{tab:1d-rmse}}{|c|c|c|c|}{
-%        SSA~\eqref{eq:1d-comparison} & HO-SSA~\eqref{eq:1d-comparison} & MSSA~\eqref{eq:nd-comparison} & HO-MSSA~\eqref{eq:nd-comparison}\nextline
-%        $0.0188$ & $0.0197$ & $0.0107$ & $0.0079$\nextline
-%        - & - & $0.00924$ & $0.00918$ \nextline
-%    }{}
-%    \Table{RMSE оценки многомерного сигнала}{|c|c|}{
-%    MSSA & HO-MSSA \nextline
-%    $0.0107$ & $0.0079$ \nextline
-%    }{}
     Во второй строке таблицы~1 приведены значения RMSE оценок многомерного сигнала~\eqref{eq:nd-comparison-lin-phase}
     методами MSSA и HO-MSSA.
     Видно, что метод HO-MSSA отделил сигнал с б\'{о}льшей точностью, чем метод MSSA, однако это преимущество
     уменьшилось по сравнению со случаем равных фаз.
 
     \razdel{Заключение}
-    В результате работы было показано, что тензорный вариант HO-MSSA для выделения многомерного сигнала дал точность выше, чем обычный MSSA.
+    В работе показано, что тензорный вариант HO-MSSA для выделения многомерного сигнала дал точность выше, чем обычный MSSA.
     Соответственно, в следующих исследованиях имеет смысл развивать теорию метода HO-MSSA для увеличения точности оценивания сигнала и его компонент.
 
 
     \begin{thebibliography}{40}
 
-        \bibitem{ssa} Golyandina~N., Nekrutkin~V., Zhigljavsky~A.\: A. Analysis of Time Series Structure - SSA and Related Techniques. Chapman and Hall/CRC, 2001. 320~p.
-        \bibitem{ezhov-ssa} Ежов~Ф.\: В. Исследование гибридных моделей нейронных сетей с применением SSA на примере реальных данных // Процессы управления и устойчивость. 2022. Т.~9, №~1. С.~223--231.
-        \bibitem{Vestnik} Головкина~A.\: Г., Козынченко~В.\: А., Клименко~И.\: С. Метод последовательных приближений для построения модели динамической полиномиальной регрессии // Вестник Санкт-Петербургского университета. Прикладная математика. Информатика. Процессы управления. 2023. Т.~18, Вып.~4. С.~487--500.
-        \bibitem{mssa} Golyandina~N., Zhigljavsky~A. Singular Spectrum Analysis for Time Series. Springer Berlin, Heidelberg, 2020. 146~p.
-        \bibitem{ESPRIT} Roy~R., Kailath~T. ESPRIT-estimation of signal parameters via rotational invariance techniques // IEEE Transactions on Acoustics, Speech, and Signal Processing. 1989. Vol.~37(7). P.~984--995.
-         \bibitem{papy-esprit}Papy~J.\:M., De~Lathauwer~L., Van~Huffel~S. Exponential data fitting using multilinear algebra: the single-channel and multi-channel case // Numerical Linear Algebra with Applications. 2005. Vol.~12(8). P.~809--826.
-       \bibitem{NMR} Van~Huffel~S., Chen~H., Decanniere~C., Van~Hecke~P. Algorithm for Time-Domain NMR Data Fitting Based on Total Least Squares // Journal of Magnetic Resonance. 1994. Vol.~110(2). P.~228--237.
-        \bibitem{Stepanov} Степанов~Д.\: В., Голяндина~Н.\: Э. Варианты метода <<Гусеница>>-SSA для прогноза многомерных временных рядов // Труды IV Международной конференции <<Идентификация систем и задачи управления>> SICPRO’05. 2005. С.~1831--1848.
-        \bibitem{hosvd} De~Lathauwer~L., De~Moor~B., Vandewalle~J. A Multilinear Singular Value Decomposition // SIAM Journal on Matrix Analysis and Applications. 2000. Vol.~21(4). P.~1253--1278.
+        \bibitem{ssa} Golyandina~N., Nekrutkin~V., Zhigljavsky~A.\:A. Analysis of Time Series Structure -- SSA and Related Techniques. New York: Chapman and Hall/CRC, 2001. 320~p.
+        \bibitem{ezhov-ssa} Ежов~Ф.\:В. Исследование гибридных моделей нейронных сетей с применением SSA на примере реальных данных // Процессы управления и устойчивость. 2022. Т.~9. №~1. С.~223--231.
+        \bibitem{Vestnik} Головкина~A.\:Г., Козынченко~В.\:А., Клименко~И.\:С. Метод последовательных приближений для построения модели динамической полиномиальной регрессии // Вестник Санкт-Петербургского университета. Прикладная математика. Информатика. Процессы управления. 2023. Т.~18. Вып.~4. С.~487--500.
+        \bibitem{mssa} Golyandina~N., Zhigljavsky~A. Singular Spectrum Analysis for Time Series. Heidelberg: Springer, 2020. 146~p.
+        \bibitem{ESPRIT} Roy~R., Kailath~T. ESPRIT-estimation of signal parameters via rotational invariance techniques // IEEE Transactions on Acoustics, Speech, and Signal Processing. 1989. Vol.~37. No~7. P.~984--995.
+         \bibitem{papy-esprit}Papy~J.\:M., De~Lathauwer~L., Van~Huffel~S. Exponential data fitting using multilinear algebra: the single-channel and multi-channel case // Numerical Linear Algebra with Applications. 2005. Vol.~12. No~8. P.~809--826.
+       \bibitem{NMR} Van~Huffel~S., Chen~H., Decanniere~C., Van~Hecke~P. Algorithm for time-domain NMR data fitting based on total least squares // Journal of Magnetic Resonance. 1994. Vol.~110. No~2. P.~228--237.
+        \bibitem{Stepanov} Степанов~Д.\:В., Голяндина~Н.\:Э. Варианты метода <<Гусеница>>--SSA для прогноза многомерных временных рядов // Труды IV Международной конференции <<Идентификация систем и задачи управления>> SICPRO’05. 2005. С.~1831--1848.
+        \bibitem{hosvd} De~Lathauwer~L., De~Moor~B., Vandewalle~J. A Multilinear singular value decomposition // SIAM Journal on Matrix Analysis and Applications. 2000. Vol.~21. No~4. P.~1253--1278.
     \end{thebibliography}
 \end{document} 
